# Urban_Farm

./: .gitignore  AnomalyDetector.cpp  AnomalyDetector.h  CMakeLists.txt  CMakeSettings.json  DatabaseConnector.cpp  DatabaseConnector.h  Dockerfile  JsonSerializer.cpp  JsonSerializer.h  MetricsCollector.cpp  MetricsCollector.h  PopulateDBwithTests.py  README.md  RestServer.cpp  RestServer.h  SensorData.h  WarningReporter.cpp  WarningReporter.h  docker-compose.yaml  main.cpp  run.sh  web-interface-deployment.yaml
db/: dockerfile
decodage/: decodage.cpp
kubernetes/: collecte-donnees-deployment.yaml  collecte_donnees-service.yaml  database-claim1-persistentvolumeclaim.yaml  database-deployment.yaml  pgadmin-deployment.yaml  pgadmin-service.yaml  sensor1-deployment.yaml  sensor2-deployment.yaml  sensor3-deployment.yaml  sensor4-deployment.yaml  sensor5-deployment.yaml  sensor6-deployment.yaml  sensor7-deployment.yaml  sensor8-deployment.yaml  sensorcustom-deployment.yaml  web-interface-deployment.yaml  web_interface-service.yaml
src/GUI/: main.cpp  urbanfarm.h
src/GUI/helloworld/: hello
src/GUI/testcrow/: CMakeLists.txt  main.cpp  web_server
src/GUI_test/gtk/: test1  urbanfarm.cpp
src/GUI_test/testcrow/: CMakeLists.txt
src/WebInterface/: Makefile  dockerfile  main.py  pyproject.toml  requirements.txt
src/api/: decodage.cpp  main  main.cpp
src/collecte_donnees/: Dockerfile  Makefile  insertion_donnees.py  main.py  pyproject.toml  requirements.txt
src/database/: init.sql  urbanfarm_schema.sql
src/datagestion/: CMakeLists.txt  main.cpp
src/decodage/: Dockerfile
winBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  UrbanFarm.sln  UrbanFarm.vcxproj  UrbanFarm.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
