[tool.poetry]
name = "Web Interface"
version = "0.1.0"
description = "A web Interface for the Urban Farm Project"
authors = ["thomas.odin@epita.fr"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "~1"
pandas = "~2"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
seaborn = "^0.13.2"
pandas-stubs = "^2.2.1.240316"
prometheus-client = "^0.20.0"
streamlit-extras = "^0.4.0"
psycopg2 = "^2.9.9"
types-psycopg2 = "^2.9.21.20240311"


[tool.poetry.dev-dependencies]
coverage = "~7"
black = "~23"
isort = "~5"
mypy = "~1"
pytest = "~7"
vulture = "~2"
git-cliff = "~1"

